🐛 fix(pages/_app.js): fix import statement for React in _app.js to use named import instead of default import ✨ feat(pages/_app.js): wrap the entire app component with React.StrictMode to enable additional checks and warnings for potential issues 🐛 fix(pages/work-single/[slug].jsx): fix import statement for useFetchPortfolioBySlug in [slug].jsx to use correct path ✨ feat(pages/work-single/[slug].jsx): fetch portfolio data based on slug parameter and display the fetched data in the component 🐛 fix(public/assets/css/style.css): decrease font size of .section.section-inner.started-heading .m-titles .m-title to 35px for better visual appearance 🐛 fix(src/hooks/useFetchData.js): fix memoization of params in useFetchData hook to correctly memoize the parameters 🐛 fix(src/hooks/useFetchPortfolios.js): fix useFetchPortfolioBySlug hook to correctly fetch portfolio data based on slug parameter 🐛 fix(src/layouts/Layout.js): fix import statement for React in Layout.js to use named import instead of default import and wrap the entire component with React.StrictMode for additional checks and warnings

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2371,7 +2371,7 @@ hr {
 }
 
 .section.section-inner.started-heading .m-titles .m-title {
-	font-size: 54px;
+	font-size: 35px;
 }
 
 .single-post .section.section-inner.started-heading .m-titles .m-title {
